Change the parameterized test separator to make individual test runs possible
1) use "." separator
2) fix some warnings

Flag: EXEMPT TEST_ONLY
Bug: 448153940
Test: atest CtsTelecomCujTestCases
Change-Id: Ib4969f13bd3a9f9b5df72609209eb7160ea03026